test/good/32.zls

let hybrid sliding (k) = (x, y) where
 rec match k with
        | true -> do der x= 1.0 and y = -1.0 done
        | false -> do der x = 1.0 and y = 1.0 done
    and init x = 1.0 and der z = y init 1.0
